cabal-version:          3.6

name:                   cardano-db
version:                13.6.0.0
synopsis:               A base PostgreSQL component for the cardano-db-sync node.
description:            Code for the Cardano DB Sync node that is shared between the
                        cardano-db-node and other components.
homepage:               https://github.com/IntersectMBO/cardano-db-sync
bug-reports:            https://github.com/IntersectMBO/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.Db
                        Cardano.Db.Schema.Core.TxOut
                        Cardano.Db.Schema.Variant.TxOut
                        Cardano.Db.Version.V13_0

  other-modules:        Cardano.Db.Error
                        Cardano.Db.Git.RevFromGit
                        Cardano.Db.Git.Version
                        Cardano.Db.Migration
                        Cardano.Db.Migration.Haskell
                        Cardano.Db.Migration.Version
                        Cardano.Db.Operations.AlterTable
                        Cardano.Db.Operations.Delete
                        Cardano.Db.Operations.Insert
                        Cardano.Db.Operations.Other.MinId
                        Cardano.Db.Operations.Query
                        Cardano.Db.Operations.QueryHelper
                        Cardano.Db.Operations.Types
                        Cardano.Db.Operations.Other.ConsumedTxOut
                        Cardano.Db.Operations.Other.JsonbQuery
                        Cardano.Db.Operations.TxOut.TxOutDelete
                        Cardano.Db.Operations.TxOut.TxOutInsert
                        Cardano.Db.Operations.TxOut.TxOutQuery
                        Cardano.Db.PGConfig
                        Cardano.Db.Run
                        Cardano.Db.Schema.BaseSchema
                        Cardano.Db.Schema.Orphans
                        Cardano.Db.Schema.Types
                        Cardano.Db.Types
                        Cardano.Db.Version.V13_0.Query
                        Cardano.Db.Version.V13_0.Schema

  build-depends:        aeson
                      , base                            >= 4.14         && < 5
                      , bech32
                      , base16-bytestring
                      , bytestring
                      , cardano-crypto-class
                      , cardano-ledger-core
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , conduit-extra
                      , contra-tracer
                      , cryptonite
                      , directory
                      , esqueleto
                      , extra
                      , fast-logger
                      , filepath
                      , file-embed
                      , iohk-monitoring
                      , lifted-base
                      , memory
                      , monad-control
                      , monad-logger
                      , persistent
                      , persistent-documentation
                      , persistent-postgresql
                      , postgresql-simple
                      , process
                      , quiet
                      , resourcet
                      , resource-pool
                      , scientific
                      , text
                      , template-haskell
                      , time
                      , transformers
                      -- This is never intended to run on non-POSIX systems.
                      , unix
                      , wide-word

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  other-modules:        Test.Property.Cardano.Db.Migration
                        Test.Property.Cardano.Db.Types
                        Test.Property.Upstream


  build-depends:        base
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-mary
                      , persistent
                      , hedgehog
                      , text
                      , wide-word

test-suite test-db
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test-db.hs
  hs-source-dirs:       test

  other-modules:        Test.IO.Cardano.Db.Insert
                        Test.IO.Cardano.Db.Migration
                        Test.IO.Cardano.Db.Rollback
                        Test.IO.Cardano.Db.TotalSupply
                        Test.IO.Cardano.Db.Util
                        Test.IO.Cardano.Db.PGConfig

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  build-depends:        base
                      , bytestring
                      , cardano-db
                      , cardano-slotting
                      , directory
                      , extra
                      , filepath
                      , monad-control
                      , persistent
                      , tasty
                      , tasty-hunit
                      , text
                      , time
                      , transformers

executable gen-schema-docs
  default-language:     Haskell2010
  main-is:              gen-schema-docs.hs
  hs-source-dirs:       app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  other-modules:        Paths_cardano_db

  build-depends:        base
                      , cardano-db
                      , persistent-documentation
                      , process
                      , text

test-suite schema-rollback
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              schema-rollback.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  build-depends:        base
                      , ansi-terminal
                      , bytestring
                      , cardano-db
                      , directory
                      , filepath
                      , text
