cabal-version:          3.6

name:                   cardano-db
version:                13.6.0.5
synopsis:               A base PostgreSQL component for the cardano-db-sync node.
description:            Code for the Cardano DB Sync node that is shared between the
                        cardano-db-node and other components.
homepage:               https://github.com/IntersectMBO/cardano-db-sync
bug-reports:            https://github.com/IntersectMBO/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.Db
                        Cardano.Db.Progress
                        Cardano.Db.Schema.Core
                        Cardano.Db.Schema.Variants
                        Cardano.Db.Schema.Variants.TxOutAddress
                        Cardano.Db.Schema.Variants.TxOutCore

  other-modules:        Cardano.Db.Error
                        Cardano.Db.Git.RevFromGit
                        Cardano.Db.Git.Version
                        Cardano.Db.Migration
                        Cardano.Db.Migration.Haskell
                        Cardano.Db.Migration.Version
                        Cardano.Db.PGConfig
                        Cardano.Db.Run
                        Cardano.Db.Schema.Core.Base
                        Cardano.Db.Schema.Core.EpochAndProtocol
                        Cardano.Db.Schema.Core.GovernanceAndVoting
                        Cardano.Db.Schema.Core.MultiAsset
                        Cardano.Db.Schema.Core.OffChain
                        Cardano.Db.Schema.Core.Pool
                        Cardano.Db.Schema.Core.StakeDeligation
                        Cardano.Db.Schema.Ids
                        Cardano.Db.Schema.MinIds
                        Cardano.Db.Schema.Types
                        Cardano.Db.Statement
                        Cardano.Db.Statement.Base
                        Cardano.Db.Statement.Constraint
                        Cardano.Db.Statement.ConsumedTxOut
                        Cardano.Db.Statement.DbTool
                        Cardano.Db.Statement.EpochAndProtocol
                        Cardano.Db.Statement.Function.Core
                        Cardano.Db.Statement.Function.Delete
                        Cardano.Db.Statement.Function.Insert
                        Cardano.Db.Statement.Function.InsertBulk
                        Cardano.Db.Statement.Function.Query
                        Cardano.Db.Statement.ChainGen
                        Cardano.Db.Statement.GovernanceAndVoting
                        Cardano.Db.Statement.JsonB
                        Cardano.Db.Statement.MinIds
                        Cardano.Db.Statement.MultiAsset
                        Cardano.Db.Statement.OffChain
                        Cardano.Db.Statement.Pool
                        Cardano.Db.Statement.Rollback
                        Cardano.Db.Statement.StakeDeligation
                        Cardano.Db.Statement.Types
                        Cardano.Db.Statement.Variants.TxOut
                        Cardano.Db.Types

  build-depends:        aeson
                      , base                            >= 4.14         && < 5
                      , bech32
                      , base16-bytestring
                      , bytestring
                      , cardano-crypto-class
                      , cardano-ledger-core
                      , cardano-prelude
                      , containers
                      , contra-tracer
                      , contravariant-extras
                      , cryptonite
                      , directory
                      , extra
                      , fast-logger
                      , file-embed
                      , filepath
                      , hasql
                      , iohk-monitoring
                      , memory
                      , monad-logger
                      , process
                      , quiet
                      , resource-pool
                      , resourcet
                      , scientific
                      , template-haskell
                      , text
                      , time
                      , transformers
                      , unliftio-core
                      -- This is never intended to run on non-POSIX systems.
                      , unix
                      , wide-word

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  other-modules:        Test.Property.Cardano.Db.Migration
                        Test.Property.Cardano.Db.Types
                        Test.Property.Upstream


  build-depends:        base
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-mary
                      , hedgehog
                      , wide-word

test-suite test-db
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test-db.hs
  hs-source-dirs:       test

  other-modules:        Test.IO.Cardano.Db.Insert
                        Test.IO.Cardano.Db.Migration
                        Test.IO.Cardano.Db.Rollback
                        Test.IO.Cardano.Db.TotalSupply
                        Test.IO.Cardano.Db.Util
                        Test.IO.Cardano.Db.PGConfig

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  build-depends:        base
                      , bytestring
                      , cardano-db
                      , cardano-slotting
                      , directory
                      , extra
                      , filepath
                      , tasty
                      , tasty-hunit
                      , text
                      , time

-- test-suite schema-rollback
--   default-language:     Haskell2010
--   type:                 exitcode-stdio-1.0
--   main-is:              schema-rollback.hs
--   hs-source-dirs:       test

--   ghc-options:          -Wall
--                         -Werror
--                         -Wcompat
--                         -Wredundant-constraints
--                         -Wincomplete-patterns
--                         -Wincomplete-record-updates
--                         -Wincomplete-uni-patterns
--                         -Wunused-imports
--                         -Wunused-packages

--   build-depends:        base
--                       , ansi-terminal
--                       , bytestring
--                       , cardano-db
--                       , directory
--                       , filepath
--                       , text
