cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer-core
version:                0.1.0.0
synopsis:               A block explorer for the Cardano chain
description:            Code for the Cardano Block Explorer that is shared between the
                        cardano-explorer-db-node and the cardano-explorer web application.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:		    https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Core

  other-modules:        Explorer.Core.DB.Schema
                        Explorer.Core.DB.Migration.Version

  build-depends:        base                            >= 4.12         && < 4.13
                      , bytestring
                      , extra
                      , persistent
                      , persistent-postgresql
                      , persistent-template
                      , time

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  other-modules:        Test.Explorer.Core.DB.Migration

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-core
                      , hedgehog
