cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer-db-node
version:                0.1.0.0
synopsis:               The DB node for the Cardano Block Explorer
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Node
  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-core
                      , cardano-ledger
                      , cardano-binary
                      , formatting
                      , cardano-crypto-wrapper
                      , reflection
                      , cardano-shell
                      , optparse-applicative
                      , cardano-node
                      , ouroboros-consensus
                      , cardano-prelude
                      , text
                      , iohk-monitoring
                      , network
                      , ouroboros-network
                      , io-sim-classes
                      , cborg
                      , typed-protocols
                      , bytestring
                      , typed-protocols-cbor
                      , serialise

executable cardano-explorer-db-node
  default-language:     Haskell2010
  main-is:              cardano-explorer-db-node.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-db-node
                      , cardano-ledger
                      , cardano-binary
                      , formatting
                      , cardano-crypto-wrapper
                      , reflection
                      , cardano-shell
                      , optparse-applicative
                      , cardano-node
                      , ouroboros-consensus
                      , cardano-prelude
                      , text
                      , iohk-monitoring
                      , network
                      , ouroboros-network
                      , io-sim-classes
                      , cborg
                      , typed-protocols
                      , bytestring
                      , typed-protocols-cbor
                      , serialise

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-db-node
